<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="Dark_theme">Тёмная тема</string>
    <string name="Share_App">Поделиться приложением</string>
    <string name="Contact_Us">Написать в поддержку</string>
    <string name="Terms_of_use">Пользовательское соглашение</string>
    <string name="practicum" translatable="false">https://praktikum.yandex.ru/android-developer/</string>
    <string name="MessageSbjectViaEmail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="MessageViaEmail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="OfferLink" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="MyEmail" translatable="false">Thesol590@yandex.ru</string>
    <string name="InternetProblems">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="Refrash">Обновить</string>
    <string name="searchNothing">Ничего не нашлось</string>
    <string name="internetProblem">Проблема со связью</string>
    <string name="historyMessage">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="startCountingPlayer" translatable="false">0:00</string>
    <string name="FavoriteTracks">Избранные треки</string>
    <string name="Playlists">Плейлисты</string>
    <string name="aintCreatedPlaylist">Вы не создали \nни одного плейлиста</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="meiaLibraryIsEmply">Ваша медиатека пуста</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
</resources>