<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="40dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/standart_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="@dimen/standart_text"
            android:text="@string/search"
            android:paddingLeft="32dp"
            app:icon="@drawable/ic_vector"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="10dp"
            app:cornerRadius="16dp"
            android:textAllCaps="false"
            android:id="@+id/search_button"
            android:foreground="?attr/selectableItemBackground"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="@dimen/standart_text"
            android:text="@string/media_library"
            android:paddingLeft="32dp"
            app:icon="@drawable/media_vector"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="10dp"
            app:cornerRadius="16dp"
            android:textAllCaps="false"
            android:id="@+id/mediateka_button"
            android:foreground="?attr/selectableItemBackground"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="@dimen/standart_text"
            android:text="@string/settings"
            android:paddingLeft="32dp"
            app:icon="@drawable/settings_vector"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="10dp"
            app:cornerRadius="16dp"
            android:textAllCaps="false"
            android:id="@+id/settings_button"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>