<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/trackTimeView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".mediateka.ui.fragment.MediatekaFragment">

            <ImageButton
                android:id="@+id/menu_button"
                style="@style/button_menu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/arrow_back" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.06" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.94" />

            <ImageView
                android:id="@+id/albumPlayerImageView"
                android:layout_width="312dp"
                android:layout_height="312dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/top_guideline" />

            <TextView
                android:maxLines="1"
                android:maxEms="28"
                android:id="@+id/songNamePlayer"
                style="@style/playerDataText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="28dp"
                android:text="@string/app_name"
                android:textAppearance="@font/ys_display_medium"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/albumPlayerImageView" />

            <TextView
                android:id="@+id/autorName"
                style="@style/playerDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/app_name"
                android:layout_marginStart="12dp"
                android:textAppearance="@font/ys_display_medium"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/songNamePlayer" />

            <ImageView
                android:id="@+id/playPauseButton"
                style="@style/playButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/baseline_play_circle_24"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/autorName" />

            <ImageView
                android:id="@+id/playlistimageView"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/button_add"
                app:layout_constraintEnd_toStartOf="@+id/playPauseButton"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/autorName" />

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_heart_selector"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toEndOf="@+id/playPauseButton"
                app:layout_constraintTop_toBottomOf="@id/autorName" />

            <TextView
                android:id="@+id/trackTimeView"
                style="@style/playerDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/playPauseButton" />

            <TextView
                android:id="@+id/playerSongDurationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/duration"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toTopOf="@id/trackTimeView" />

            <TextView
                android:id="@+id/playerSongDurationTextViewData"
                style="@style/playerDataText"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintBaseline_toBaselineOf="@id/playerSongDurationTextView"
                app:layout_constraintEnd_toStartOf="@id/right_guideline" />

            <TextView
                android:id="@+id/playerAlbumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/album"
                android:textColor="@color/grey"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/playerSongDurationTextView" />

            <TextView
                android:id="@+id/playerAlbumNameData"
                style="@style/playerDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintBaseline_toBaselineOf="@id/playerAlbumName"
                app:layout_constraintEnd_toStartOf="@id/right_guideline" />

            <TextView
                android:id="@+id/yearOfRelise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/year"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/playerAlbumName" />

            <TextView
                android:id="@+id/yearOfReliseData"
                style="@style/playerDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintBaseline_toBaselineOf="@id/yearOfRelise"
                app:layout_constraintEnd_toStartOf="@id/right_guideline" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/genre"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/yearOfRelise" />

            <TextView
                android:id="@+id/genreData"
                style="@style/playerDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintBaseline_toBaselineOf="@id/genre"
                app:layout_constraintEnd_toStartOf="@id/right_guideline" />

            <TextView
                android:id="@+id/сountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/country"
                android:textColor="@color/grey"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <TextView
                android:id="@+id/countryData"
                style="@style/playerDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintBaseline_toBaselineOf="@id/сountry"
                app:layout_constraintEnd_toStartOf="@id/right_guideline" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        style="@style/botomSheetRectangleStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/slideriv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/botom_sheet_rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/addToPlaylisttv"
            style="@style/playerDataText"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Добавить в плейлист"
            android:textAppearance="@font/ys_display_medium"
            android:textSize="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slideriv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newPlaylistButton"
            style="@style/refrashButton"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:insetTop="2dp"
            android:insetBottom="4dp"
            android:outlineProvider="none"
            android:text="@string/newPlaylist"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:cornerRadius="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addToPlaylisttv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistrv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="160dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newPlaylistButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>