<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/searchActivityTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backToMainActivityFromSearchActivity"
                style="@style/backButtonSearchStyle"
                android:layout_width="61dp"
                android:layout_height="@dimen/squareImage"
                android:contentDescription="@string/no"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:outlineProvider="none"
                android:paddingStart="13dp"
                android:paddingEnd="15dp"
                app:icon="@drawable/arrow_back"
                app:iconGravity="start" />

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/search"
                android:textSize="@dimen/standart_text"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/searchEditText"
                style="@style/searchTextEditStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="textAutoCorrect"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/ic_vector"
                android:drawablePadding="10dp"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:inputType="textAutoCorrect"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:singleLine="true"
                android:textColor="@color/DarkFun"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" />

            <ImageView
                android:id="@+id/cancelInputSearchEditText"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="end"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_cancel"
                android:visibility="gone"
                app:tint="@color/grey" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/historyTextView"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal|top"
                android:text="Вы искали"
                android:textAppearance="@font/ys_display_medium"
                android:textSize="19sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trackListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearHistoryButton"
                style="@style/refrashButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:foreground="?attr/selectableItemBackground"
                android:insetTop="2dp"
                android:insetBottom="4dp"
                android:outlineProvider="none"
                android:text="Очистить историю"
                android:textSize="14sp"
                android:visibility="visible"
                app:cornerRadius="20dp"
                android:layout_weight="0.1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchProblems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/problemImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@color/DarkFun" />

        <TextView
            android:id="@+id/statusText"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="19sp" />

        <TextView
            android:id="@+id/internetProblemText"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/InternetProblems"
            android:textAlignment="center"
            android:textSize="19sp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refrashButton"
            style="@style/refrashButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:foreground="?attr/selectableItemBackground"
            android:insetTop="2dp"
            android:insetBottom="8dp"
            android:outlineProvider="none"
            android:text="@string/Refrash"
            android:textSize="14sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
